deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment.yaml -n shot --replicas 3
    kompose.service.expose: shots.wayl.one
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shot-wayl-one
  name: shot-wayl-one
  namespace: shot
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: shot-wayl-one
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: shot
  namespace: shot
spec: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment.yaml -n shot --replicas 3
    kompose.service.expose: shots.wayl.one
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shot-wayl-one
  name: shot-wayl-one
  namespace: shot
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: shot-wayl-one
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deployment.yaml -n shot --replicas 3
        kompose.service.expose: shots.wayl.one
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/shot-scraper-api-default: "true"
        io.kompose.service: shot-wayl-one
    spec:
      containers:
        - env:
            - name: ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: ACCESS_KEY
                  name: minio-access-key
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: SECRET_KEY
                  name: minio-secret-key
          image: registry.wayl.one/shot-scraper-api
          name: shot-wayl-one
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment.yaml -n shot --replicas 3
    kompose.service.expose: shots.wayl.one
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shot-wayl-one
  name: shot-wayl-one
  namespace: shot
spec:
  rules:
    - host: shots.wayl.one
      http:
        paths:
          - backend:
              service:
                name: shot-wayl-one
                port:
                  number: 5000
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
